# manga-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_db.py
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0707450b185f_add_subscription_table.py  5934da862684_add_manga_and_chapter_tables.py  86058edeee81_initial_migration.py
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  manga.py  users.py  utils.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  manga.py  manga_new.py  subscription.py  user.py
app/schemas/: manga.py  user.py
app/services/: file_service.py  manga_service.py  subscription_service.py  user_service.py
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/create/: page.tsx
frontend/app/admin/manga/[id]/add-chapter/: page.tsx
frontend/app/login/: page.tsx
frontend/app/manga/[slug]/: page.tsx
frontend/app/read/[chapterId]/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: MangaCard.tsx  Navbar.tsx
frontend/lib/: api.ts  auth.ts
tests/: conftest.py  test_auth.py
