[project]
name = "manga26"
version = "0.1.0"
description = "manga_backend"
authors = [
    {name = "admin",email = "arlikinseverus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.2)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "redis (>=4.2.0,<5.0.0)",
    "fastapi-cache2[redis] (>=0.2.2,<0.3.0)",
    "aiofiles (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function" # <--- ЭТО РЕШЕНИЕ
filterwarnings = [
    "ignore::DeprecationWarning", 
    "ignore::RuntimeWarning"
]